# Deep_research_structured_report

./: .gitignore  .pre-commit-config.yaml  README.md  config.py  env_template.sh  initialize_prompt_versioning.py  main.py  prompt_cli.py  pyproject.toml  report_generator.py  requirements-dev.txt  requirements_txt.txt  setup_dev.sh
.github/workflows/: ci.yml  ci.yml.disabled
prompts/: __init__.py  planning.py  writing.py
tests/: __init__.py  conftest.py  test_json_parser.py  test_rate_limiter.py
utils/: __init__.py  json_parser.py  observability.py  prompt_loader.py  prompt_versioning.py  rate_limiter.py  search_cache.py  token_manager.py
